hello-world-secured-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: http://oauth2-proxy.localtest.me/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy-service.default.svc.cluster.local/oauth2/auth
  name: example-ingress
  namespace: default
spec:
  rules:
  - host: hello-world.localtest.me
    http:
      paths:
      - backend:
          serviceName: hello-world-service
          servicePort: 9080
        path: /
        pathType: ImplementationSpecific
