hello-world.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app.kubernetes.io/name: hello-world
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-world
      app.kubernetes.io/instance: oauth2-proxy-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-world
        app.kubernetes.io/instance: oauth2-proxy-example
    spec:
      containers:
        - name: hello-world
          image: "conservis/hello-world:1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
---
kind: Service
apiVersion: v1
metadata:
  name: hello-world-service
spec:
  type: ClusterIP
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: hello-world
    app.kubernetes.io/instance: oauth2-proxy-example
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - host: hello-world.localtest.me
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-world-service
              servicePort: 9080
---
